# lsl-definitions

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  autobuild.xml  build-cmd.sh  gen_all_definitions.sh  gen_definitions.py  lsl_definitions.schema.json  lsl_definitions.schema.yaml  lsl_definitions.yaml  lsl_definitions.yml  pyproject.toml  slua_definitions.schema.json  slua_definitions.yaml  sort_keywords_expat.py  validate.py
.github/workflows/: build.yaml  cla.yaml  pre-commit.yaml  validate.yaml
lsl_definitions/: __init__.py  lsl.py  rulesets.py  slua.py  utils.py
lsl_definitions/generators/: __init__.py  base.py  builtins_txt.py  experimental.py  keywords.py  lscript.py  lscript_compiler.py  lsl.py  slua.py  slua_embedded.py  slua_lsp_docs.py  textmate.py
templates/: EmbeddedBuiltinDefinitions.cpp  EmbeddedBuiltinDefinitions.in.cpp  LslLibrary.cs  indra.in.l  indra.in.y
templates/syntax/: LICENSE.md  lsl.tmLanguage  lsl.tmLanguage.json  slua.tmLanguage  slua.tmLanguage.json
